Gerar resultados a funcionar corretamente